--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,33 @@ h1 {
 	margin-bottom: 15px;
 }
 
+.tab2{
+	tab-size: 2;
+}
+
+.tab4{
+	tab-size: 4;
+}
+.tab8{
+	tab-size: 8;
+}
+
+.fontsmall{
+	font-size: small;
+
+}
+.fontxsmall{
+	font-size: x-small;
+}
+
+.center{
+	text-align: center;
+}
+
+.margin-left-sm {
+	margin-left: 6px;
+  }
+
 .showcase {
 	height: 100vh;
 	display: flex;
