--- a/css/webflow.css
+++ b/css/webflow.css
@@ -4,6 +4,8 @@
   font-weight: normal;
   font-style: normal;
 }
+
+
 [class^="w-icon-"],
 [class*=" w-icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
@@ -49,7 +51,7 @@ body {
   margin: 0;
   min-height: 100%;
   background-color: #fff;
-  font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif,;
   font-size: 14px;
   line-height: 20px;
   color: #333;
