Insta section added

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,13 @@ h1 {
 	margin-left: 8px;
   }
 
+.centerimg {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 18%;
+	}
+
 .showcase {
 	height: 100vh;
 	display: flex;
