--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,13 @@ h1 {
 	display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 18%;
+  width: 22.5%;
+  height: auto;
+  
 }
+
+
+
 .showcase {
 	height: 100vh;
 	display: flex;
