--- a/css/asas-framework.webflow.css
+++ b/css/asas-framework.webflow.css
@@ -655,8 +655,8 @@ figcaption {
 }
 
 .section.is-header.is-half-dark.section-with-bg {
-  background-image: url('../images/aboutus.jpg');
-  background-position: 0% 50%;
+  background-image: url('../images/merc.jpg');
+  background-position: 0% 65%;
   background-size: cover;
 }
 
