--- a/css/asas-framework.webflow.css
+++ b/css/asas-framework.webflow.css
@@ -4101,6 +4101,12 @@ figcaption {
   background-position: 50% 50%;
   background-size: cover;
 }
+.slide-with-bg.bg6 {
+  background-image: url("../images/subaru.jpg");
+  background-position: 50% 70%;
+  height: 450px;
+  background-size: cover;
+}
 
 .col-2 {
   margin-bottom: 48px;
