--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,14 @@ h1 {
 	margin-bottom: 15px;
 }
 
+.sizer{
+		display: grid;  
+		grid-gap: 5px;  
+		grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+		grid-template-rows: repeat(2, 100px);  
+	}
+
+
 .marginlower{
 	margin-bottom: 25px;
 }
